@@ -1,3 +1,14 @@
+2011-06-22  Cary Clark  <caryclark@google.com>
+
+        Reviewed by Darin Fisher.
+
+        Use Skia if Skia on Mac Chrome is enabled
+        https://bugs.webkit.org/show_bug.cgi?id=62999
+
+        * wtf/Platform.h:
+        Add switch to use Skia if, externally,
+        Skia has been enabled by a gyp define.
+
 2011-06-22  Geoffrey Garen  <ggaren@apple.com>
 
         Reviewed by Oliver Hunt.
